--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,40 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <title>One.UF - Scheduler</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>One.UF - Scheduler</title>
-</head>
-
-<body>
-  <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
-      Please enable it to continue.</strong>
-  </noscript>
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
-</body>
-
+  <body>
+    <noscript>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
 
 <script>
-  function allowDrop(ev) {
-    ev.preventDefault();
+  function handleDragStart(e) {
+    this.style.opacity = "0.4";
+    dragSrcEl = this;
+
+    e.dataTransfer.effectAllowed = "copy";
+    e.dataTransfer.setData("text/html", this.innerHTML);
+  }
+  function handleDragOver(e) {
+    if (e.preventDefault) {
+      e.preventDefault();
+    }
+
+    return false;
+  }
+  function handleDrop(e) {
+    if (e.stopPropagation) {
+      e.stopPropagation(); // stops the browser from redirecting.
+    }
+
+    if (dragSrcEl !== this) {
+      var list = document.getElementById("list");
+      var listItem = document.createElement("li");
+      var deleteButton = document.getElementById("delete-button");
+      let cloneBtn = deleteButton.cloneNode(true);
+      cloneBtn.style.display = "inline";
+      listItem.appendChild(dragSrcEl);
+      listItem.appendChild(cloneBtn);
+      list.appendChild(listItem);
+    }
+
+    return false;
+  }
+  function handleDragEnd(e) {
+    this.style.opacity = "1";
+
+    items.forEach(function(item) {
+      item.classList.remove("over");
+    });
   }
 
-  function drag(ev) {
-    ev.dataTransfer.setData("text", ev.target.id);
+  function handleDragEnter(e) {
+    this.classList.add("over");
   }
 
-  function drop(ev) {
-    ev.preventDefault();
-    var data = ev.dataTransfer.getData("text");
-    var node = document.createElement("li");
-    var course = document.getElementById(data);
-    node.appendChild(course);
-    ev.target.appendChild(node);
+  function handleDragLeave(e) {
+    this.classList.remove("over");
   }
+
+  let items = document.querySelectorAll(".box");
+  items.forEach(function(item) {
+    item.addEventListener("dragenter", handleDragEnter, false);
+    item.addEventListener("dragleave", handleDragLeave, false);
+    item.addEventListener("drop", handleDrop, false);
+    item.addEventListener("dragover", handleDragOver, false);
+  });
+
+  let draggables = document.querySelectorAll(".courses .course");
+  draggables.forEach(function(item) {
+    item.addEventListener("dragstart", handleDragStart, false);
+    item.addEventListener("dragend", handleDragEnd, false);
+  });
 </script>
